# valdemar

./: .gitignore  README.md  stack.yaml  valdemar.cabal
examples/: core.val  sketches.val
extras/valdemar-vim/ftdetect/: valdemar.vim
extras/valdemar-vim/syntax/: valdemar.vim
runtime/: runtime.val
src/: CodeGenerator.hs  Compiler.hs  Emitter.hs  Fault.hs  Lexer.hs  Main.hs  Parser.hs  Syntax.hs  TypeChecker.hs
src/Transformations/: LoopAllocator.hs
tests/: arrays.val  bf.val  destructuring.val  hello.val  life.val  pathtrace.val  test.c  test.val  tuples.val
