name:                valdemar
version:             0.1.0.0
synopsis:            A simple compier of very simple language called Valdemar 
description:         Please see README.md
homepage:            http://github.com/mbelicki/valdemar#readme
license:             GPL-3
license-file:        LICENSE.md
author:              Mateusz Belicki 
maintainer:          _@belickim.net
copyright:           2016 Mateusz Belicki
category:            Compiler
build-type:          Simple
cabal-version:       >=1.10

executable valdemar
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -fprof-auto -fprof-cafs
  build-depends:       base >= 4.6 && < 5, 
                       parsec >= 3.1.9,
                       llvm-general >= 3.5.1.2,
                       llvm-general-pure >= 3.5, 
                       containers >= 0.5, 
                       mtl >= 2.0, 
                       directory >= 1.0, 
                       process >= 1.2

